--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     color: darkblue;
 }
@@ -33,13 +33,20 @@ h3 {
     padding: 10px;
 }
 
+.leyenda {
+    font-size: 0.7rem;
+    height: auto;
+    margin: auto;
+    color: darkblue;
+}
+
 .tabla {
-    font-size: 1.3rem;
+    font-size: 1rem;
     color:rgb(0, 102, 255);
     width: 80%;
     max-width: 800px;
     margin: auto;
-    padding: 1rem 0;
+    padding: 1rem 0 0 0;
 }
 
 table, th, td {
@@ -58,4 +65,20 @@ th {
     background-color: darkblue;
     color: white;
     height: 15%;
+}
+
+button {
+    width: 200px;
+    margin: 0 0 20px 0;
+    font-weight: 600;
+    font-size: 1.3rem;
+    height: 40px;
+    border-radius: 25px;
+    background-color: rgb(73, 206, 246);
+    color: blue ;
+}
+
+button:hover {
+    background-color: rgb(37, 37, 199);
+    color: rgb(255, 255, 255) ;
 }
